@@ -1,5 +1,8 @@
 CHANGES IN FLTK 1.1.7
 
+	- FLUID didn't use the label type constant names for
+	  menu items, causing them to be drawn using the normal
+	  label type (STR #668)
 	- Fl_File_Chooser was slow with large directories (STR
 	  #654)
 	- FLUID didn't add xclass() calls to windows (STR #718)
